2005-06-11  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates.

	* gtk/gtkwidget.c (gtk_widget_set_app_paintable): More docs
	provided by Owen Taylor.

	* gtk/gtk.symbols: 
	* gtk/gtkiconview.h: 
	* gtk/gtkiconview.c (gtk_icon_view_get_visible_range): 
	Add a function to determine what parts of the model are
	visible.  (#306726, Jonathan Blandford)

	* gtk/gtkfilesystemunix.c (create_file_info): Treat backup
	files the same way as hidden files, to be closer to what
	Nautilus does.  (#136196, Sean Middleditch)

2005-06-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaccellabel.c (_gtk_accel_label_class_get_accelerator_label): 
	Don't modify strings returned from gettext().

Fri Jun 10 19:06:03 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtktextdisplay.c (render_para): don't use deprecated
	gdk_gc_unref function.

2005-06-10  Matthias Clasen  <mclasen@redhat.com>

	Allow setting paragraph background.  (#81045, Gustavo
	Carneiro, patch by Jeroen Zwartepoorte)
	
	* gtk/gtktextlayout.c (set_para_values): Propagate 
	pg_bg_color to the display struct.
	(gtk_text_layout_free_line_display): Free it here.

	* gtk/gtktextdisplay.c (render_para): If pg_bg_color
	is set, draw a rectangle in that color behind
	the paragraph.

	* gtk/gtktexttag.c (gtk_text_tag_class_init): Add 
	paragraph-background, paragraph-background-gdk and
	paragraph-background-set properties.
	(set_pg_bg_color): A setter for paragraph-background.

	* gtk/gtktextlayout.h (struct _GtkTextLineDisplay): Add
	pg_bg_color.

	* gtk/gtktexttag.h (struct _GtkTextAttributes): Add
	pg_bg_color.
	(struct _GtkTextTag): Add pg_bg_color_set.

2005-06-10  Kjartan Maraas  <kmaraas@gnome.org>

	* gdk/gdkcairo.c: (gdk_cairo_set_source_pixbuf): Destroy the
	cairo surface when done with it. Plugs a fairly large leak in
	some cases.
	==6014== 1999824 (115640 direct, 1884184 indirect) bytes in
	826 blocks are definitely lost in loss record 25239 of 25250
	Like this from nautilus.
